--- a/payment-demo/payment-receiver/src/main/resources/application.yml
+++ b/payment-demo/payment-receiver/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   application:
     name: payment-receiver
   rabbitmq:
-    username: admin
-    password: admin
-    host: 192.168.108.128
+    username: guest
+    password: guest
+    host: localhost
     port: 5672
