--- a/payment-demo/payment-receiver/src/main/resources/application.yml
+++ b/payment-demo/payment-receiver/src/main/resources/application.yml
@@ -8,3 +8,9 @@ spring:
     password: guest
     host: localhost
     port: 5672
+    listener:
+      simple:
+        concurrency: 1
+        max-concurrency: 1
+        acknowledge-mode: manual
+        prefetch: 1
